adds javascript connection to html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <input type="text"/>
     <br />
     <br />
-    <button>Click here to see your answer</button>
+    <button onclick="magic8()">Click here to see your answer</button>
+    <p id="answer"></p>
+    <script type="text/javascript" src="magic8.js"></script>
   </body>
 
 </html>
